# Nano

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  LICENSE.md  README.md  ayybot.py  changes.txt  cmds.txt  config.py  converter.py  dbcleanup.py  discord-bot.py  docker-compose.yml  filterwords.txt  launchbot.py  nano.py  pyproject.toml  redis.conf  redis.conf.example  redisCache.conf.example  redisCacheExample.conf  requirements.txt  scommands.py  settings.ini  settings.ini.example  settings.txt  settingsExample.ini  startbot.bat  startbot.sh  status.txt  utils.py
0.10 asyncio api/: ayybot.py  changes.txt  cmds.txt  config.py  settings.ini
0.10async api/: cmds.txt
0.9 api (obsolete)/: OLD_VERSION.txt  ayybot.py  changes.txt  config.py  settings.ini
backup/: servers.yml.bak  stats.yml.bak
bots_discord_pw/: POSTServerCount.py
core/: configuration.py  confparser.py  directories.json  exceptions.py  serverhandler.py  stats.py  translations.py  utils.py
data/: config.ini.example  confparser.py  customcmds.txt  redis.conf.example  redisCache.conf.example  serverhandler.py  servers.yml  settings.ini.example  stats.py  stats.yml  translations.py  utils.py
docker/: README.md  directories.json  docker-build.sh  dockerautorun.sh  nano-entrypoint.sh  redis-docker.conf  redis.conf  redisCache-docker.conf  redisCache.conf  settings.ini.example
plugins/: POSTServerCount.py  admin.py  backup.py  banned_words.txt  bptf.py  commons.py  config.ini  configExample.ini  conversation.py  count.py  data.yml  developer.py  fun.py  games.py  gametime.py  help.py  (+24 more)
(+27 files in other folders)
